# py-Augur

./: DISCOVERY.md  ITERATION_LOG.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
data/: manifest.yaml
examples/: benchmark_R_vs_Python.ipynb  function_by_function_R_parity.ipynb  quickstart.ipynb  r_per_function_dump.R
pyaugur/: __init__.py  core.py  differential.py  feature_selection.py
tests/: r_reference_driver.R  r_selected_genes_CellTypeA.txt  r_selected_genes_CellTypeB.txt  r_selected_genes_CellTypeC.txt  r_timing.json  reference_output.json  sc_sim_meta.csv  test_exact_match.py  test_smoke.py
